# project/api-gateway/api/handlers/models/product.go
@@ -5,3 +5,10 @@ type Product struct {
 	Model string
 	OwnerID int64
 }
+
+type ListProducts struct {
+	Id int64
+	Name string
+	Model string
+	OwnerID int64
+}
