# project/api-gateway/api/handlers/models/user.go
@@ -4,3 +4,12 @@ type User struct {
 	LastName string
 	Name string
 }
+
+type RegisterUserModel struct {
+	Name string
+	LastName string
+	Email string
+	Userame string
+	Password string
+	Code string
+}
