# project/api-gateway/api/router.go
@@ -2,13 +2,13 @@ package api
 
 import (
 	"github.com/gin-gonic/gin"
+	_ "github.com/project/api-gateway/api/docs"
 	v1 "github.com/project/api-gateway/api/handlers/v1"
 	"github.com/project/api-gateway/config"
 	"github.com/project/api-gateway/pkg/logger"
 	"github.com/project/api-gateway/services"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	_ "github.com/project/api-gateway/api/docs"
 )
 
 // Option ...
@@ -32,10 +32,19 @@ func New(option Option) *gin.Engine {
 	})
 
 	api := router.Group("/v1")
+
+	// User apis
 	api.POST("/users", handlerV1.CreateUser)
 	api.GET("/users/:id", handlerV1.GetUser)
 
+	// Product apis
 	api.POST("/product", handlerV1.CreateProduct)
+	api.GET("/product/:id", handlerV1.GetProduct)
+	api.GET("/products/:id", handlerV1.GetUserProducts)
+	api.GET("/products/all", handlerV1.ListProducts)
+	
+	// Authentication
+	api.POST("/register", handlerV1.Register)
 
 	// url := ginSwagger.URL("swagger/docs.json")
 	api.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
